--- a/src/ui/app/layout/topBar/topBar.sass
+++ b/src/ui/app/layout/topBar/topBar.sass
@@ -3,7 +3,9 @@ header
   display: flex
   align-items: center
   height: 60px
-  margin-bottom: 1vh
+  position: fixed
+  width: 100%
+  z-index: 999
 
   .app-title
     margin-left: 20px
