--- a/src/ui/assets/styles/main.sass
+++ b/src/ui/assets/styles/main.sass
@@ -1,8 +1,11 @@
 @import ./_variables.sass
+@import ./_breakpoints.sass
+@import ./animations.sass
 
-*,
-*::before,
-*::after
+body,
+div,
+div::before,
+div::after
   box-sizing: border-box
   margin: 0
   font-weight: normal
@@ -12,9 +15,8 @@ body
   color: var(--text-color)
   background-color: var(--background-color)
   transition: color 0.5s, background-color 0.5s
-  line-height: 1.6
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
-  font-size: 15px
+  font-size: 16px
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
