--- a/src/ui/views/home/components/movieCard/movieCard.sass
+++ b/src/ui/views/home/components/movieCard/movieCard.sass
@@ -3,6 +3,8 @@
 .movie-box
   width: calc(20% - 20px)
   margin-bottom: 40px
+  text-decoration: none
+  color: var(--text-color)
   .movie-img-box
     width: 100%
     height: 0
