Added footer and changed styles

--- a/src/ui/assets/styles/_variables.sass
+++ b/src/ui/assets/styles/_variables.sass
@@ -3,18 +3,4 @@
   --background-color: #111315
   --text-color: #FCFCFC
   --text-color-altered: #888
-  --accent-color: #039BE5
-
-body[data-theme='dark']
-  --main-color: #1D1A1F
-  --background-color: #111315
-  --text-color: #FCFCFC
-  --text-color-altered: #888
-  --accent-color: #039BE5
-
-body[data-theme='light']
-  --main-color: #1D1A1F
-  --background-color: #FCFCFC
-  --text-color: #222
-  --text-color-altered: #888
-  --accent-color: #039BE5
+  --accent-color: #39a5f0
