--- a/src/ui/assets/styles/main.sass
+++ b/src/ui/assets/styles/main.sass
@@ -21,8 +21,16 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+#app
+  display: flex
+  flex-direction: column
+  min-height: 100vh
+  main
+    flex: 1
+
 a
   color: var(--accent-color)
+  text-decoration: none
 
 .container, .bigger-container, .full-container-with-padding
   padding: 15px 20px
